Baglantisiz linkler duzeltildi

--- a/Login-HtmlCssBootstrapJspJava/WebContent/index.html
+++ b/Login-HtmlCssBootstrapJspJava/WebContent/index.html
@@ -54,7 +54,7 @@
                           <li><span class="fa fa-check text-success"></span> Üyelik yararları <small>(sadece yeni üyeler)</small></li>
                           <li><a href="#"><u>Daha fazla</u></a></li>
                       </ul>
-                      <p><a href="/new-customer/" class="btn btn-info btn-block">Hemen Üye Olun!</a></p>
+                      <p><a href="#" class="btn btn-info btn-block">Hemen Üye Olun!</a></p>
                   </div>
               </div>
           </div>
